tests/valid/control.simpl
let x be 10
while x > 0 do
    if x > 5 then
        set x to x - 2
    else
        set x to x - 1
    end
end