tests/syntax_errors/missing_end.simpl
let x be 10
while x > 0 do
    print x